--- a/client/src/components/LandingPage/LandingPage.module.css
+++ b/client/src/components/LandingPage/LandingPage.module.css
@@ -2,12 +2,10 @@
     background-image: url(../../img/landing_dogs.jpg);
     display: flex;
     background-position: center;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     background-size: cover;
     height: 900px;
     width: 100%;
+    justify-content: space-between;
 }
 
 .info {
@@ -20,6 +18,7 @@
     background-image: linear-gradient(white, rgba(215, 196, 196, 0.187));
     border-radius: 20px;
     opacity: 0;
+    align-self: center;
 }
 
 .info:hover{
@@ -48,6 +47,10 @@ p{
 }
 
 .github{
+    height: 80%;
+}
+
+.linked {
     height: 60%;
 }
 
@@ -56,4 +59,12 @@ p{
     flex-direction: row;
     justify-content: flex-end;
     height: 100px;
+}
+
+.navLandingPage1{
+    display: flex;
+    flex-direction: row;
+    height: 100px;
+    padding-left: 20px;
+    margin-top: 10px;
 }
